--- a/src/admin/sass/style.scss
+++ b/src/admin/sass/style.scss
@@ -3,7 +3,7 @@
  * Style for Private Area (SCSS)
  *
  * @author Takuto Yanagida @ Space-Time Inc.
- * @version 2021-06-01
+ * @version 2021-06-03
  *
  */
 
@@ -18,7 +18,7 @@
 
 
 html, body {
-	min-height: 100vh;
+	min-height: calc(var(--vh, 1vh) * 100);
 	margin: 0;
 }
 
